--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 .jumbotron{
     padding: 70px 30px;
     margin:0px auto;
-    background-color: #9575CD;
+    background-color: #7f56c4;
     color: floralwhite;
 }
 
